# mfjdyno-dyno-system

./: .gitignore  .java-frontend-link  Cargo.toml  esp32-device-config.json  install.sh  rsync-exclude.txt  start-dyno.sh  sync-to-pi.sh
crates/dyno-core/: Cargo.toml
crates/dyno-core/fixtures/: live_frame_golden.json
crates/dyno-core/src/: api.rs  app.rs  audit.rs  bme280.rs  calibration.rs  can.rs  config.rs  correction.rs  deps.rs  detect.rs  esp32_config.rs  esp32_json.rs  flash.rs  fusion.rs  health.rs  lib.rs  main.rs  paths.rs  physics.rs  replay.rs  run_control.rs  serial.rs  serial_gate.rs  serial_link.rs  sources.rs  state.rs  storage.rs  ws.rs
crates/dyno-protocol/: Cargo.toml
crates/dyno-protocol/src/: codec.rs  command.rs  config.rs  device_info.rs  error.rs  frame.rs  lib.rs  packet.rs  response.rs  transport.rs
crates/dyno-sim/: Cargo.toml
crates/dyno-types/: Cargo.toml
deploy/env/: dyno-operator-console.env.example  dyno.env  dynod.env.example
deploy/systemd/: dyno-canable.service  dyno-operator-console.service  dynod.service
docs/: AUDIT-2026-07.md  ESP32_CONFIG_SYNC.md  OPERATIONS.md  esp32-device-config.example.json  wiring.md
firmware/: platformio.ini
firmware/firmware-test/: firmware-test.ino  platformio.ini
firmware/src/: bme280_sensor.cpp  bme280_sensor.h  can_afr.cpp  can_afr.h  config_store.cpp  config_store.h  config_validator.cpp  config_validator.h  encoder.cpp  encoder.h  engine_pulse.cpp  engine_pulse.h  main.cpp  protocol.cpp  protocol.h  telemetry.cpp  telemetry.h
java/: build.gradle  settings.gradle
scripts/: diagnose_telemetry.sh
summary/: README.md  project-summary.md
summary/modules/: api-contracts.md  backend.md  deployment.md  firmware.md  frontend.md  shared-rust-crates.md  workflows.md
tools/: flash-esp32.sh
(+155 files in other folders)
