[workspace]
members = [
    "crates/dyno-types",
    "crates/dyno-protocol",
    "crates/dyno-core",
    "crates/dyno-sim",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
dyno-types    = { path = "crates/dyno-types" }
dyno-protocol = { path = "crates/dyno-protocol" }
dyno-core     = { path = "crates/dyno-core" }

anyhow             = "1"
tokio-serial       = "5"
chrono             = { version = "0.4", features = ["serde"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc               = "0.2"
