[package]
name    = "dyno-core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dynod"
path = "src/main.rs"

[dependencies]
dyno-types    = { workspace = true }
dyno-protocol = { workspace = true }

anyhow             = { workspace = true }
serde              = { workspace = true }
tokio-serial       = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
libc               = { workspace = true }
tokio-tungstenite  = "0.24"
futures-util       = "0.3"
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
chrono             = { workspace = true }
rusqlite           = { version = "0.31", features = ["bundled"] }
axum               = "0.7"
tower              = { version = "0.5", features = ["util"] }

[dev-dependencies]
dyno-types = { workspace = true }
